[gd_scene load_steps=2 format=3 uid="uid://bfc1t4aahimuy"]

[ext_resource type="Script" uid="uid://lhky26i8hmgx" path="res://game_end_hud.gd" id="1_fjyei"]

[node name="GameEndHUD" type="CanvasLayer"]
visible = false
script = ExtResource("1_fjyei")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VictoryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 66

[node name="ReplayBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "REPLAY"

[node name="Return2MainMenuBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "RETURN TO MAIN MENU"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ReplayBtn" to="." method="_on_replay_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Return2MainMenuBtn" to="." method="_on_return_2_main_menu_btn_pressed"]
